--- a/linkedoffer2/main.css
+++ b/linkedoffer2/main.css
@@ -20,7 +20,7 @@ h1{
 	text-align: center;
 }
 a{
-	border-radius: 10px 0px 10px 0px;
+	border-radius: 10px 10px 10px 10px;
 	text-decoration: none;
 	color: #FFF;
 	background-color: #EC8515;
@@ -68,5 +68,6 @@ button:focus{
 	right: 10px;
 	margin-top: 150px;
 	font-size: 14px;
-	line-height: 30px;			
+	line-height: 30px;
+	color:#a1a1a1;			
 }
