--- a/linkedoffer2/main.css
+++ b/linkedoffer2/main.css
@@ -63,11 +63,8 @@ button:focus{
 	line-height: 40px;
 }
 #footi{
-	position: fixed;
-	bottom: 10px;
-	right: 10px;
+	position: relative;
 	margin-top: 150px;
 	font-size: 14px;
-	line-height: 30px;
 	color:#a1a1a1;			
 }
