--- a/linkedoffer2/main.css
+++ b/linkedoffer2/main.css
@@ -16,8 +16,14 @@ h1{
 	font-family: "微软雅黑";
 	font-weight: normal;
 	margin: 0 auto;
-	margin-top: 60px;
+	margin-top: 100px;
 	text-align: center;
+}
+a{
+	border-radius: 10px 10px 10px 10px;
+	text-decoration: none;
+	color: #FFF;
+	background-color: #EC8515;
 }
 button{
 	display: block;
@@ -60,18 +66,5 @@ button:focus{
 	position: relative;
 	margin-top: 150px;
 	font-size: 14px;
-	color:#a1a1a1;
-}
-#footi a{
-	margin-top: -6px;
-	margin-bottom: 8px;
-	height: 30px;
-	width: 30px;
-	border-radius: 15px 15px 15px 15px;
-	text-decoration: none;
-	line-height: 30px;
-	color: #FFF;
-	background-color: #EC8515;
-	float: right;
-	text-align: center;
+	color:#a1a1a1;			
 }
