--- a/1000hr/style.css
+++ b/1000hr/style.css
@@ -8,8 +8,9 @@ a,.block{
     position: fixed;
     width: 100%;
     height:50px;
+    top: -50px;
     background-color: #42474B;
-    opacity: 0;
+    /*opacity: 0;*/
     transition:  1s;
     -moz-transition: 1s;
     -webkit-transition:  1s;
