--- a/1000hr/style.css
+++ b/1000hr/style.css
@@ -90,7 +90,7 @@ h1{
     padding-bottom: 30px;
 }
 .rolelist{
-    max-width:1440px;
+    /*max-width:1440px;*/
     margin-top: 50px;
     height: 100px;
 }
