--- a/1000hr/style.css
+++ b/1000hr/style.css
@@ -22,6 +22,7 @@ a,.block{
     line-height: 50px;
     text-align: center;
     opacity: 1;
+    cursor: pointer;
     transition: all 0.3s linear;
 }
 .block:hover{
@@ -31,7 +32,7 @@ a,.block{
 }
 #page_1{
     padding-top:50px;
-    background-color: #1889C5;
+    background-color: #132739;
     color: white;
 }
 #logo{
@@ -60,6 +61,7 @@ li {
     line-height: 40px;
     font-family: "微软雅黑",Arial,Helvetica,sans-serif;
     font-size: 16px;
+    padding: 5px;
 }
 h1{
     font-family: "微软雅黑",Arial,Helvetica,sans-serif;
@@ -77,7 +79,7 @@ h1{
     margin-left: 2%;
 }
 #page_1 .role a{
-    color: #1889C5;
+    color: #132739;
     font-weight: bold;
 }
 #page_1 #r1{
@@ -85,7 +87,7 @@ h1{
 }
 #page_2{
     padding-top:100px;
-    background-color: #8058a5;
+    background-color: #CF3C3A;
     color: white;
     padding-bottom: 30px;
 }
@@ -103,6 +105,7 @@ h1{
     text-align: center;
     line-height:50px;
     border-radius: 5px;
+    cursor: pointer;
 }
 .role a{
     color: #1889C5;
@@ -136,28 +139,28 @@ h1{
 }
 #page_3{
     padding-top:100px;
-    background-color: #f37b1d;
+    background-color: #3683BB;
     color: white;
     padding-bottom: 30px;
 }
 
 #page_4{
     padding-top:100px;
-    background-color: #5eb95e;
+    background-color: #613C7F;
     color: white;
     padding-bottom: 30px;
 }
 
 #page_5{
     padding-top:100px;
-    background-color: #96BE4E;
+    background-color: #5eb95e;
     color: white;
     padding-bottom: 30px;
 }
 
 #page_6{
     padding-top:100px;
-    background-color: #dd514c;
+    background-color: #96BE4E;
     color: white;
     padding-bottom: 30px;
 }
@@ -300,24 +303,24 @@ button {
 @keyframes breathr
 {
     0%   {background:#1889C5; }
-    50%  {background:green; }
+    50%  {background:#00FFA1; }
     100% {background:#1889C5; }
 }
 @-moz-keyframes breathr /* Firefox */
 {
     0%   {background:#1889C5; }
-    50%  {background:green; }
+    50%  {background:#00FFA1; }
     100% {background:#1889C5; }
 }
 @-webkit-keyframes breathr /* Safari and Chrome */
 {
     0%   {background:#1889C5; }
-    50%  {background:green; }
+    50%  {background:#00FFA1; }
     100% {background:#1889C5; }
 }
 @-o-keyframes breathr /* Opera */
 {
     0%   {background:#1889C5; }
-    50%  {background:green; }
+    50%  {background:#00FFA1; }
     100% {background:#1889C5; }
 }
