--- a/preorder/css/hDate.css
+++ b/preorder/css/hDate.css
@@ -9,11 +9,11 @@
 	/*background-color:#f9f9f9;*/
 	/*border:1px solid #ddd;*/
 	color:#333!important;font-size:12px;}
-.calendar_head{line-height:25px;width:100%;float:left;margin-top:3px;position:relative;}
+.calendar_head{line-height:25px;width:90%;margin-left:5%;float:left;margin-top:3px;position:relative;}
 .calendar_head input{width:35%;border:0px;font-family:Arial;background-color:#fff;margin-left:5%;text-align:center;line-height:18px;outline:none;border-radius:3px;}
 .calendaremL{float:left;font-family:Arial;font-weight:bold;margin-top:-2px;padding:0 5px;cursor:pointer;}
 .calendaremR{float:right;font-family:Arial;font-weight:bold;margin-top:-2px;padding:0 5px;cursor:pointer;}
-.calendar_boy{float:left;position:relative;width:100%;}
+.calendar_boy{float:left;position:relative;width:90%;margin-left:5%;}
 .calendar_boy i{position:absolute;left:0;top:25px;right:0px;bottom:0;text-align:center;font-size:150px;font-family:Arial;color:#fff;z-index:0;}
 ._caltable{border-collapse:collapse;width:100%;float:left;position:relative;}
 ._caltable tr td{line-height:25px;width:25px;text-align:center;font-family:Arial;cursor:pointer;border-bottom:0px solid #f1f1f1;border-right:0px solid #f1f1f1;}
