--- a/preorder/css/hDate.css
+++ b/preorder/css/hDate.css
@@ -19,9 +19,9 @@
 ._caltable tr td{line-height:25px;width:25px;text-align:center;font-family:Arial;cursor:pointer;border-bottom:0px solid #f1f1f1;border-right:0px solid #f1f1f1;}
 ._caltable tr:first-child td{border-bottom:0px solid #ddd;cursor:default;border-bottom:0px solid #eee;border-right:0;}
 ._caltable tr td:last-child{border-right:0;}
-._sday{color:#ff6a00;font-family:'Microsoft YaHei';}
+._sday{color:rgb(255, 153, 0);font-family:'Microsoft YaHei';}
 .festival{color:#ff6a00!important;}
-._selDay{background-color:#ff9900;color:#fff;font-family:'Microsoft YaHei';}
+._selDay{color:rgb(255, 153, 0);font-family:'Microsoft YaHei';}
 .calYear{border:1px solid #f5d2ba;width:50px;width:80%;position:absolute;z-index:2000;left:5%;background-color:#eee;border-collapse:collapse;}
 .calYear td{text-align:center;cursor:pointer;}
 .calYear td:hover{color:#ff6a00;}
